2008-08-20  Tor Lillqvist  <tml@novell.com>

	Bug 324234 - Using g_io_add_watch_full() to wait for connect() to
	return on a non-blocking socket returns prematurely

	Bug 548278 - Async GETs connections are always terminated
	unexpectedly on Windows

	* glib/giowin32.c: Add one more state variable to the
	GIOWin32Channel struct, ever_writable. Initialise it to FALSE, set
	to TRUE when the WSAEventSelect() indicates FD_WRITE, and never
	reset to FALSE.

	Don't do the WSASetEvent() in g_io_win32_prepare() unless
	ever_writable is TRUE. Don't automatically indicate G_IO_OUT in
	g_io_win32_check() unless ever_writable is TRUE.

	This fixes the behaviour of the test case program in bug #548278,
	and the "Testcase for the spurious OUT event bug" in bug
	#324234. It also doesn't seem to break anything. Not that there is
	any exhaustive test suite...

	Add a comment with a list of bugs that are related to the code in
	this file.

2008-08-18  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-08-18  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.7 ===

2008-08-17  Sven Neumann  <sven@gimp.org>

	* NEWS: mention GWinHttpVfs.

2008-08-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-08-15 12:41:26  Tim Janik  <timj@imendio.com>

	* glib/gtestutils.c: changed assertion messages, so older emacsen
	can also detect failing source file and line, fixes:
	Bug 502498 – Test framework assertion failures should follow gcc error format

2008-08-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 547832 – gtk+-2.12.11 fails to build - AC_PROG_MMAP too strict,
	and unnecessary

	* configure.in: Be a little bit more forgiving when checking
	for mmap. Patch by Peter O'Gorman

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547337 – G_DISABLE_DEPRECATED breaks tests build

	* tests/testglib.c: Protect deprecated API by ifdefs.
	Patch by Kalle Vahlman

2008-08-13  Matthias Clasen  <mclasen@redhat.com>
